<resources>
    <string name="app_name">Nutrition App</string>
    <string name="nutrition">Nutrition</string>
    <string name="search_diets">Search diets...</string>
    <string name="recipes">Recipes</string>
    <string name="track_nutrition">Track Nutrition</string>
    <string name="add_new_diet">Add New Diet</string>
    <string name="diet_name">Diet Name</string>
    <string name="enter_diet_name">Enter diet name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="allergies">Allergies</string>
    <string name="gluten">Gluten</string>
    <string name="dairy">Dairy</string>
    <string name="peanuts">Peanuts</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="diet_details">Diet Details</string>
    <string name="allergies_details">Allergies: %1$s</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="sample_meal_plan">Sample Meal Plan</string>
    <string name="tips">Tips</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="error_required_fields">Please fill all required fields</string>
    <string name="recipe_salad">Vegetable salad with chicken breast</string>
    <string name="recipe_salmon">Grilled salmon with asparagus</string>
    <string name="recipe_eggs">Fried eggs with avocado</string>
    <string name="recipe_pork">Grilled pork ribs with garlic butter sauce</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
</resources>