<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutrition"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="#7ED648"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:id="@+id/textViewHeader"/>

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_diets"
        android:layout_below="@id/textViewHeader"
        android:layout_margin="16dp"
        android:background="@android:drawable/editbox_background"
        android:padding="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDiets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/editTextSearch"
        android:layout_above="@id/footerLayout"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#7ED648"
        android:padding="8dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonRecipes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/recipes"
            android:backgroundTint="#6A0DAD"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonTrackNutrition"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/track_nutrition"
            android:backgroundTint="#6A0DAD"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddDiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="#7ED648"
        app:tint="#FFFFFF"/>

</RelativeLayout>